Created .nuget folder

--- a/.nuget/nuget.nuspec
+++ b/.nuget/nuget.nuspec
@@ -15,6 +15,6 @@
     <tags>UI Framework Development Toolbox Windows Forms VisualStudio Visual-Studio .NET Metro ModernUI MetroFramework MetroUI WinForms Controls Graphics Rendering Library Components Visual Plus Visual-Plus VB VB.NET User Interface User-Interface VPF</tags>
   </metadata>
   <files>
-  <file src="VisualPlus\bin\Release\VisualPlus.dll" target="lib\VisualPlus.dll"></file>
+  <file src="..\VisualPlus\bin\Release\VisualPlus.dll" target="lib\VisualPlus\4\VisualPlus.dll"></file>
   </files>
 </package>
