--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -245,6 +245,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include=".nuget\" />
     <Folder Include="Toolkit\Dialogs\" />
   </ItemGroup>
   <ItemGroup>
