--- a/.nuget/nuget.nuspec
+++ b/.nuget/nuget.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/DarkByte7/VisualPlus</projectUrl>
     <iconUrl>http://i.imgur.com/1AvNHG2.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>The VisualPlus Framework (VPF), VisualPlus UI for WinForms allows you to rapidly deploy professional .NET applications with customizable controls.</description>
+    <description>The VisualPlus Framework (VPF), VisualPlus UI for WinForms allows you to rapidly deploy professional .NET applications with customizable components and controls.</description>
     <releaseNotes>Initial release.</releaseNotes>
     <copyright>Copyright 2016-2018</copyright>
     <tags>UI Framework Development Toolbox Windows Forms VisualStudio Visual-Studio .NET Metro ModernUI MetroFramework MetroUI WinForms Controls Graphics Rendering Library Components Visual Plus Visual-Plus VB VB.NET User Interface User-Interface VPF</tags>
