--- a/VisualPlus/VisualPlus.csproj
+++ b/VisualPlus/VisualPlus.csproj
@@ -128,9 +128,7 @@
     <Compile Include="Toolkit\Controls\Interactivity\VisualRangeBar.cs" />
     <Compile Include="Designer\ActionList\VisualComboBoxActionList.cs" />
     <Compile Include="Designer\VisualComboBoxDesigner.cs" />
-    <Compile Include="Toolkit\Controls\Interactivity\VisualControlBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Toolkit\Controls\Interactivity\VisualControlBox.cs" />
     <Compile Include="Toolkit\Dialogs\ThemesEditor.cs" />
     <Compile Include="Toolkit\Dialogs\VisualExceptionDialog.cs">
       <SubType>Form</SubType>
@@ -163,7 +161,6 @@
     <Compile Include="Toolkit\VisualBase\NestedControlsBase.cs" />
     <Compile Include="Toolkit\VisualBase\CheckBoxBase.cs" />
     <Compile Include="Toolkit\VisualBase\ContainedControlBase.cs" />
-    <Compile Include="Toolkit\VisualBase\VisualControlBase.cs" />
     <Compile Include="Enumerators\MouseStates.cs" />
     <Compile Include="Toolkit\VisualBase\ProgressBase.cs" />
     <Compile Include="Toolkit\VisualBase\RadioButtonBase.cs" />
@@ -255,6 +252,7 @@
     <Compile Include="Toolkit\Child\VisualToolStripMenuItem.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Toolkit\VisualBase\VisualControlBase.cs" />
     <Compile Include="Toolkit\VisualBase\VisualStyleBase.cs" />
     <Compile Include="TypeConverters\BasicSettingsTypeConverter.cs" />
     <Compile Include="TypeConverters\ThemeTypeConverter.cs" />
